fixes scrollbar showing up on text

--- a/good-writes-client/src/components/Pieces/Piece.css
+++ b/good-writes-client/src/components/Pieces/Piece.css
@@ -15,6 +15,8 @@
   overflow-x: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
+  padding-bottom: 3px;
+  margin-bottom: 0px;
 }
 
 .piece.profile > .header .text {
@@ -23,5 +25,5 @@
 
 .piece.profile > .header .form-label {
   position: relative;
-  top: -22px;
+  top: -16px;
 }
